--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -50,7 +50,7 @@ Slick Slider Styles
             max-width: 50%;
             opacity: 0;
             position: absolute;
-            top: 50%;
+            top: 53%;
             left: 50%;
             transform: translate(-50%, -50%);
 
@@ -63,13 +63,13 @@ Slick Slider Styles
 
             @-webkit-keyframes animation1 {
                 0% {opacity: 0;}
-                20% {opacity: 1;}
+                40% {opacity: 1;}
                 100% {opacity: 1;}
             }
         
             @keyframes animation1 {
                 0% {opacity: 0;}
-                20% {opacity: 1;}
+                40% {opacity: 1;}
                 100% {opacity: 1;}
             }
         }
@@ -78,8 +78,8 @@ Slick Slider Styles
     .second {            
 
         .slider-txt1 {
-            margin-top: 7%;
-            left: 50%;
+            margin-top: 12%;
+            left: 42%;
             transform: translate(-50%, -50%);
 
             &.slider-animation-txt1 {
@@ -90,21 +90,21 @@ Slick Slider Styles
             }
 
             @-webkit-keyframes animation2 {
-                0% {opacity: 0; margin-top: 5%;}
-                20% {opacity: 1; margin-top: 7%;}
-                100% {opacity: 1; margin-top: 7%;}
+                0% {opacity: 0; margin-top: 0%;}
+                20% {opacity: 1; margin-top: 12%;}
+                100% {opacity: 1; margin-top: 12%;}
             }
         
             @keyframes animation2 {
-                0% {opacity: 0; margin-top: 5%;}
-                20% {opacity: 1; margin-top: 7%;}
-                100% {opacity: 1; margin-top: 7%;}
+                0% {opacity: 0; margin-top: 0%;}
+                20% {opacity: 1; margin-top: 12%;}
+                100% {opacity: 1; margin-top: 12%;}
             }        
         }
 
         .slider-txt2 {
-            margin-top: 15%;
-            left: 50%;
+            margin-top: 18%;
+            left: 62%;
             transform: translate(-50%, -50%);
 
             &.slider-animation-txt2 {
@@ -115,17 +115,17 @@ Slick Slider Styles
             }
 
             @-webkit-keyframes animation3 {
-                0% {opacity: 0; margin-top: 18%;}
-                20% {opacity: 0; margin-top: 18%;}
-                40% {opacity: 1; margin-top: 15.5%;}
-                100% {opacity: 1; margin-top: 15.5%;}
+                0% {opacity: 0; margin-top: 22%;}
+                20% {opacity: 0; margin-top: 20%;}
+                40% {opacity: 1; margin-top: 18%;}
+                100% {opacity: 1; margin-top: 18%;}
             }
         
             @keyframes animation3 {
-                0% {opacity: 0; margin-top: 18%;}
-                20% {opacity: 0; margin-top: 18%;}
-                40% {opacity: 1; margin-top: 15.5%;}
-                100% {opacity: 1; margin-top: 15.5%;}
+                0% {opacity: 0; margin-top: 22%;}
+                20% {opacity: 0; margin-top: 20%;}
+                40% {opacity: 1; margin-top: 18%;}
+                100% {opacity: 1; margin-top: 18%;}
             }
         }
     }
@@ -476,3 +476,53 @@ Slick Slider Styles
     }
 }
 
+/* Slider Origine */
+.sliderOrigineContainer {
+    background-color: rgba($gray, 0.7);
+    padding: 30px 40px;
+    width: auto;
+    max-height: 250px;
+    margin: 1.5em 0;
+
+    .sliderOrigine {
+
+        img {
+            width: 100%;
+            height: auto;
+            padding: 0 15px;
+        }
+
+        .slick-next, .slick-prev {
+            height: auto;
+            width: auto;
+            z-index: 9999;
+
+            &::before {
+                content: "";
+                display: block;
+                background-size: 30px 30px;
+                background-repeat: no-repeat;
+                height: 30px;
+                width: 30px;
+                // display: none;
+            }
+        }
+
+        .slick-next {
+            right: -35px;
+
+            &::before {
+                background-image: url(../assets/icons/next-white.svg);
+            }
+        }
+        
+
+        .slick-prev {
+            left: -35px;
+
+            &::before {
+                background-image: url(../assets/icons/back-white.svg);
+            }
+        }
+    }
+}
