--- a/sass/_smallScreenDefault.scss
+++ b/sass/_smallScreenDefault.scss
@@ -33,6 +33,204 @@ p {
     }
 }
 
+/* Styles Eleves formations
+----------------------------- */
+.block1 {
+
+    display: inline-block;
+    // margin-right: 40px;
+    margin-top: 60px;
+    margin-left: 10.5%;
+    max-width: 400px;
+    max-height: 550px;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-color: $softBlack;
+    border-radius: 5px;
+    text-align: center;
+    position: relative;
+
+    .blocks-titles {
+
+        height: 140px;
+        background-color: $primary;
+        box-shadow: 0px 3px 3px 0px rgba(46, 46, 46, 0.5);
+        position: relative;
+
+        p {
+            font-family: $fontTexte;
+            font-size: 30px;
+            color: white;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+    }
+
+    .blocks-texts {
+        margin-top: 20px;
+    }
+}
+
+.block2 {
+
+    display: inline-block;
+    margin-top: 60px;
+    margin-left: 10.5%;
+    max-width: 400px;
+    max-height: 550px;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-color: $softBlack;
+    border-radius: 5px;
+    text-align: center;
+    position: relative;
+
+    .blocks-titles {
+
+        height: 140px;
+        background-color: $primary;
+        box-shadow: 0px 3px 3px 0px rgba(46, 46, 46, 0.5);
+        position: relative;
+
+        p {
+            font-family: $fontTexte;
+            font-size: 30px;
+            color: white;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+    }
+
+    .blocks-texts {
+        margin-top: 20px;
+    }
+}    
+
+.block3 {
+
+    display: inline-block;
+    margin-top: 60px;
+    margin-left: 10.5%;
+    max-width: 400px;
+    max-height: 550px;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-color: $softBlack;
+    border-radius: 5px;
+    text-align: center;
+    position: relative;
+    
+    .blocks-titles {
+    
+        height: 140px;
+        background-color: $primary;
+        box-shadow: 0px 3px 3px 0px rgba(46, 46, 46, 0.5);
+        position: relative;
+    
+        p {
+            font-family: $fontTexte;
+            font-size: 30px;
+            color: white;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+    
+    }
+    
+    .blocks-texts {
+        margin-top: 20px;
+    }
+}
+
+.block4 {
+
+    display: inline-block;
+    margin-top: 60px;
+    margin-left: 10.5%;
+    max-width: 400px;
+    max-height: 550px;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-color: $softBlack;
+    border-radius: 5px;
+    text-align: center;
+    position: relative;
+
+    .blocks-titles {
+
+        height: 140px;
+        background-color: $primary;
+        box-shadow: 0px 3px 3px 0px rgba(46, 46, 46, 0.5);
+        position: relative;
+
+        p {
+            font-family: $fontTexte;
+            font-size: 30px;
+            color: white;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+    }
+
+    .blocks-texts {
+        margin-top: 20px;
+    }
+}
+
+.block5 {
+
+    display: inline-block;
+    margin-top: 60px;
+    margin-left: 10.5%;
+    max-width: 400px;
+    max-height: 550px;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-color: $softBlack;
+    border-radius: 5px;
+    text-align: center;
+    position: relative;
+
+    .blocks-titles {
+
+        height: 140px;
+        background-color: $primary;
+        box-shadow: 0px 3px 3px 0px rgba(46, 46, 46, 0.5);
+        position: relative;
+
+        p {
+            font-family: $fontTexte;
+            font-size: 30px;
+            color: white;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+    }
+
+    .blocks-texts {
+        margin-top: 20px;
+    }
+}
+
 
 /* Media Queries Small Screen
 ---------------------------- */
