(master) refactor the menu Eleves

--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -490,6 +490,7 @@ Slick Slider Styles
             width: 100%;
             height: auto;
             padding: 0 15px;
+            border-radius: 25%;
         }
 
         .slick-next, .slick-prev {
