--- a/css/styles.css
+++ b/css/styles.css
@@ -889,6 +889,7 @@ Slick Slider Styles
   width: 100%;
   height: auto;
   padding: 0 15px;
+  border-radius: 25%;
 }
 .sliderOrigineContainer .sliderOrigine .slick-next, .sliderOrigineContainer .sliderOrigine .slick-prev {
   height: auto;
@@ -1319,8 +1320,15 @@ Small Screen Styles (from 599px downwards)
   margin-bottom: 0.8rem;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: Poppins, sans-serif;
+  font-weight: 600;
+  color: #212529;
+}
+
 p {
   font: 15px Raleway, sans-serif;
+  color: #212529;
 }
 
 /* Styles Accueil Ecole
@@ -1335,261 +1343,6 @@ p {
 .accroche span {
   font: 55px Scriptina, sans-serif;
   line-height: 1.5;
-}
-
-/* Styles Eleves formations
------------------------------ */
-.block1 {
-  display: inline-block;
-  margin-top: 60px;
-  margin-left: 10.5%;
-  max-width: 400px;
-  max-height: 550px;
-  background-color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #212529;
-  border-radius: 5px;
-  text-align: center;
-  position: relative;
-}
-.block1 .blocks-titles {
-  height: 140px;
-  background-color: #006fba;
-  box-shadow: 0px 3px 3px 0px rgba(46, 46, 46, 0.5);
-  position: relative;
-}
-.block1 .blocks-titles p {
-  font-family: Raleway, sans-serif;
-  font-size: 20px;
-  color: white;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-.block1 .blocks-texts {
-  margin-top: 20px;
-}
-
-.block2 {
-  display: inline-block;
-  margin-top: 60px;
-  margin-left: 10.5%;
-  max-width: 400px;
-  max-height: 550px;
-  background-color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #212529;
-  border-radius: 5px;
-  text-align: center;
-  position: relative;
-}
-.block2 .blocks-titles {
-  height: 140px;
-  background-color: #006fba;
-  box-shadow: 0px 3px 3px 0px rgba(46, 46, 46, 0.5);
-  position: relative;
-}
-.block2 .blocks-titles p {
-  font-family: Raleway, sans-serif;
-  font-size: 20px;
-  color: white;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-.block2 .blocks-texts {
-  margin-top: 20px;
-}
-
-.block3 {
-  display: inline-block;
-  margin-top: 60px;
-  margin-left: 10.5%;
-  max-width: 400px;
-  max-height: 550px;
-  background-color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #212529;
-  border-radius: 5px;
-  text-align: center;
-  position: relative;
-}
-.block3 .blocks-titles {
-  height: 140px;
-  background-color: #006fba;
-  box-shadow: 0px 3px 3px 0px rgba(46, 46, 46, 0.5);
-  position: relative;
-}
-.block3 .blocks-titles p {
-  font-family: Raleway, sans-serif;
-  font-size: 20px;
-  color: white;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-.block3 .blocks-texts {
-  margin-top: 20px;
-}
-
-.block4 {
-  display: inline-block;
-  margin-top: 60px;
-  margin-left: 10.5%;
-  max-width: 400px;
-  max-height: 550px;
-  background-color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #212529;
-  border-radius: 5px;
-  text-align: center;
-  position: relative;
-}
-.block4 .blocks-titles {
-  height: 140px;
-  background-color: #006fba;
-  box-shadow: 0px 3px 3px 0px rgba(46, 46, 46, 0.5);
-  position: relative;
-}
-.block4 .blocks-titles p {
-  font-family: Raleway, sans-serif;
-  font-size: 20px;
-  color: white;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-.block4 .blocks-texts {
-  margin-top: 20px;
-}
-
-.block5 {
-  display: inline-block;
-  margin-top: 60px;
-  margin-left: 10.5%;
-  max-width: 400px;
-  max-height: 550px;
-  background-color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #212529;
-  border-radius: 5px;
-  text-align: center;
-  position: relative;
-}
-.block5 .blocks-titles {
-  height: 140px;
-  background-color: #006fba;
-  box-shadow: 0px 3px 3px 0px rgba(46, 46, 46, 0.5);
-  position: relative;
-}
-.block5 .blocks-titles p {
-  font-family: Raleway, sans-serif;
-  font-size: 20px;
-  color: white;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-.block5 .blocks-texts {
-  margin-top: 20px;
-}
-
-/* Styles Eleves formations
------------------------------ */
-.header1 {
-  background-image: url("../assets/imgtextures/raie_bleu.jpg");
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  color: white;
-  margin: 0 auto;
-  margin-top: 60px;
-  text-align: center;
-  max-width: 1140px;
-  height: auto;
-  background-size: 100% auto;
-}
-.header1 h3 {
-  font-size: 10px;
-}
-@media screen and (min-width: 320px) {
-  .header1 h3 {
-    font-size: calc(10px + 28 * ((100vw - 320px) / 880));
-  }
-}
-@media screen and (min-width: 1200px) {
-  .header1 h3 {
-    font-size: 38px;
-  }
-}
-.header1 p {
-  font-size: 6px;
-}
-@media screen and (min-width: 320px) {
-  .header1 p {
-    font-size: calc(6px + 14 * ((100vw - 320px) / 880));
-  }
-}
-@media screen and (min-width: 1200px) {
-  .header1 p {
-    font-size: 20px;
-  }
-}
-
-.efcontents {
-  margin-top: 3%;
-  margin-left: 5%;
-  margin-right: 5%;
-}
-.efcontents .salaries {
-  background-color: #7fd0ff;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #212529;
-  border-radius: 5px;
-}
-.efcontents .salaries h4 {
-  margin: 5px;
-}
-.efcontents .salaries p {
-  margin: 5px;
-}
-.efcontents .salaries img {
-  float: left;
-  width: 20%;
-  height: auto;
-  border-radius: 5px;
-}
-.efcontents .salariesimg {
-  background-color: #7fd0ff;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #212529;
-  border-radius: 5px;
-  max-height: 160px;
-  width: auto;
-}
-.efcontents .salariesimg h4 {
-  margin: 5px;
-}
-.efcontents .salariesimg p {
-  margin: 5px;
-}
-.efcontents .salariesimg img {
-  float: left;
-  width: 10%;
-  border-radius: 5px;
-  margin: 5px;
 }
 
 /* Styles Accueil Origine
@@ -1630,6 +1383,136 @@ p {
   left: 0;
   right: 0;
   margin: auto;
+}
+
+/* Styles Eleves formations
+----------------------------- */
+.formationEleves {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.formationEleves:first-child {
+  margin-top: 60px;
+}
+.formationEleves .blockCenter {
+  text-align: center !important;
+}
+.formationEleves .blockCenter .blocks {
+  display: inline-block;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  max-width: 400px;
+  max-height: 550px;
+  background-color: white;
+  border: 1px solid #212529;
+  border-radius: 5px;
+  text-align: center;
+  position: relative;
+}
+.formationEleves .blockCenter .blocks a {
+  text-decoration: none;
+}
+.formationEleves .blockCenter .blocks-titles {
+  height: 140px;
+  background-color: #006fba;
+  background-image: url("../assets/imgtextures/raie_bleu_horizontale.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.formationEleves .blockCenter .blocks-titles p {
+  font-family: Raleway, sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-bottom: 0;
+}
+.formationEleves .blockCenter .blocks-texts {
+  margin-top: 20px;
+  padding: 1em;
+  color: #212529;
+}
+
+/* Styles Eleves financements
+----------------------------- */
+.header1 {
+  background-image: url("../assets/imgtextures/raie_bleu.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  padding: 1em;
+  margin: 0 auto;
+  margin-top: 60px;
+  margin-bottom: 24px;
+  text-align: center;
+  max-width: 1140px;
+  height: auto;
+}
+.header1 h3 {
+  color: white;
+}
+.header1 h3 {
+  font-size: 24px;
+}
+@media screen and (min-width: 320px) {
+  .header1 h3 {
+    font-size: calc(24px + 14 * ((100vw - 320px) / 880));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header1 h3 {
+    font-size: 38px;
+  }
+}
+.header1 p {
+  color: white;
+}
+.header1 p {
+  font-size: 16px;
+}
+@media screen and (min-width: 320px) {
+  .header1 p {
+    font-size: calc(16px + 4 * ((100vw - 320px) / 880));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header1 p {
+    font-size: 20px;
+  }
+}
+
+.efcontents .salaries {
+  padding: 1em;
+  background-color: #7fd0ff;
+  border: 1px solid #006fba;
+  border-radius: 5px;
+  margin-bottom: 1.5em;
+}
+.efcontents .salaries img {
+  float: left;
+  width: 20%;
+  height: auto;
+  border-radius: 5px;
+}
+.efcontents .salaries ul li {
+  margin-left: 30px;
+}
+.efcontents .salaries p:last-child {
+  margin-bottom: 0;
+}
+.efcontents .salariesimg {
+  height: auto;
+  max-width: 100px;
+}
+.efcontents .salariesimg img {
+  float: left;
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  margin-right: 16px;
 }
 
 /* Media Queries Small Screen
