--- a/sass/_menus+Navigations.scss
+++ b/sass/_menus+Navigations.scss
@@ -397,6 +397,7 @@ Large Screen Navigation
 
     .underline {
         background-color: rgba($gray, 0.3);
+        margin: 0 auto;
         height: 1px;
         margin-bottom: 0.5em;
     }
@@ -421,4 +422,16 @@ Large Screen Navigation
             }
         }
     }
+}
+
+/* Footer Bottom Fixed for Small Content*/
+.footerBottom {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;  
+}
+
+.footerBottom1200 {
+    height: 126px;
 }
