--- a/css/styles.css
+++ b/css/styles.css
@@ -1558,6 +1558,9 @@ p {
   justify-content: center;
   align-items: center;
 }
+.formationPros .blockCenter .blocks-titles:hover {
+  opacity: 0.5;
+}
 .formationPros .blockCenter .blocks-titles p {
   font-family: Raleway, sans-serif;
   font-size: 20px;
@@ -1616,7 +1619,7 @@ p {
   margin-bottom: 20px;
 }
 
-/*Styles accompagnement Pros
+/*Styles vae Pros
 --------------------*/
 .vaePros {
   text-align: center;
@@ -1662,6 +1665,81 @@ p {
   margin-bottom: 20px;
 }
 
+/*Styles modeles
+--------------------*/
+.modeles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.modeles:first-child {
+  margin-top: 60px;
+}
+.modeles .header1 {
+  background-image: url("../assets/imgtextures/motif_texture_cercle_orange_h1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: white;
+  padding: 1em;
+  margin: 0 auto;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  text-align: center;
+  max-width: 1140px;
+  height: auto;
+  border-radius: 20px;
+}
+.modeles .header1 h3 {
+  color: white;
+}
+.modeles .blockCenter {
+  text-align: center !important;
+}
+.modeles .blockCenter .blocks {
+  display: inline-block;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  max-width: 400px;
+  max-height: 550px;
+  background-color: white;
+  border: 1px solid #212529;
+  border-radius: 50px;
+  text-align: center;
+  position: relative;
+}
+.modeles .blockCenter .blocks a {
+  text-decoration: none;
+}
+.modeles .blockCenter .blocks-titles {
+  height: 220px;
+  width: 300px;
+  background-color: #006fba;
+  background-image: url("../assets/imgtextures/motif_texture_cercle_orange.jpg");
+  background-position: 40%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 49px;
+  box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modeles .blockCenter .blocks-titles:hover {
+  opacity: 0.5;
+}
+.modeles .blockCenter .blocks-titles div {
+  display: block;
+}
+.modeles .blockCenter .blocks-titles p {
+  font-family: Raleway, sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-bottom: 0;
+}
+
+/*Styles label
+--------------------*/
 /* Media Queries Small Screen
 ---------------------------- */
 @media screen and (max-width: 360px) {
