--- a/css/styles.css
+++ b/css/styles.css
@@ -1561,7 +1561,6 @@ main {
   margin-right: 16px;
 }
 
-<<<<<<< HEAD
 /*Styles Formations Pros
 --------------------*/
 .formationPros {
@@ -1747,13 +1746,41 @@ main {
   max-width: 400px;
   max-height: 550px;
   background-color: white;
-  border: 1px solid #212529;
-  border-radius: 50px;
+  border-radius: 10px 10px 50px 50px;
   text-align: center;
   position: relative;
+  color: #212529;
 }
 .modeles .blockCenter .blocks a {
   text-decoration: none;
+}
+.modeles .blockCenter .blocks h3 {
+  text-align: left;
+  text-shadow: 2px 2px 4px rgba(34, 34, 34, 0.5);
+}
+.modeles .blockCenter .blocks h3 span {
+  font-size: 80px;
+  font-family: Scriptina, sans-serif;
+  color: #e3881b;
+}
+.modeles .blockCenter .blocks h3 span {
+  font-size: 64px;
+}
+@media screen and (min-width: 320px) {
+  .modeles .blockCenter .blocks h3 span {
+    font-size: calc(64px + 16 * ((100vw - 320px) / 880));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modeles .blockCenter .blocks h3 span {
+    font-size: 80px;
+  }
+}
+.modeles .blockCenter .blocks h3 .euros {
+  font-size: 40px;
+  text-shadow: 1px 1px #e3881b;
+  position: relative;
+  top: 5px;
 }
 .modeles .blockCenter .blocks-titles {
   height: 220px;
@@ -1763,7 +1790,8 @@ main {
   background-position: 40%;
   background-size: cover;
   background-repeat: no-repeat;
-  border-radius: 49px;
+  border: 1px solid #212529;
+  border-radius: 9px 9px 50px 50px;
   box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
   display: flex;
   justify-content: center;
@@ -1784,7 +1812,6 @@ main {
 
 /*Styles label
 --------------------*/
-=======
 /* Styles Contact
 ----------------------------- */
 .contactScript {
@@ -1828,7 +1855,6 @@ main {
   background-color: #0098fe;
 }
 
->>>>>>> 038d56a906b2d6d3b0dc34cde26af7508090e1b1
 /* Media Queries Small Screen
 ---------------------------- */
 @media screen and (max-width: 360px) {
