--- a/sass/_smallScreenDefault.scss
+++ b/sass/_smallScreenDefault.scss
@@ -449,13 +449,40 @@ main {
             max-width: 400px;
             max-height: 550px;
             background-color: white;
-            border: 1px solid $softBlack;
-            border-radius: 50px;
+            border-radius: 10px 10px 50px 50px;
             text-align: center;
             position: relative;
+            color: $softBlack;
             
             & a {
                 text-decoration: none;
+            }
+
+            h3 {
+                text-align: left;
+                text-shadow: 2px 2px 4px rgba(34, 34, 34, 0.5);
+
+                span {
+                    font-size: 80px;
+                    font-family: $fontScript;
+                    color: $secondary;
+
+                    // Fluid font
+                    $min_width: 320px;
+                    $max_width: 1200px;
+                    $min_font: 64px;
+                    $max_font: 80px;
+                    @include fluid-type($min_width, $max_width, $min_font, $max_font); 
+                }
+        
+                .euros {
+                    font-size: 40px;
+                    text-shadow: 1px 1px $secondary;
+                    position: relative;
+                    top: 5px;
+                    // left: -2px;
+                }
+
             }
         }
 
@@ -468,7 +495,8 @@ main {
             background-position: 40%;
             background-size: cover;
             background-repeat: no-repeat;
-            border-radius: 49px;
+            border: 1px solid $softBlack;
+            border-radius: 9px 9px 50px 50px;
             box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
             display: flex;
             justify-content: center;
