--- a/sass/_smallScreenDefault.scss
+++ b/sass/_smallScreenDefault.scss
@@ -462,8 +462,9 @@ main {
             }
 
             h3 {
-                text-align: left;
+                text-align: center;
                 text-shadow: 2px 2px 4px rgba(34, 34, 34, 0.5);
+                font-size: 1.6rem;
 
                 span {
                     font-size: 80px;
@@ -505,7 +506,7 @@ main {
             justify-content: center;
             align-items: center;
 
-            &:hover { opacity: 0.5;}
+            &:hover { opacity: 0.8;}
 
             div {
                 display: block;
@@ -551,15 +552,21 @@ main {
 }
 
 #map {
-    height: 280px;
+    height: 300px;
     width: auto;
     background-color: #e9ecef;
     border-radius: 5px;
     margin-bottom: 1.5em;
 }
 
-.text-danger {
-    display: none;
+// .text-danger {
+//     display: none;
+// }
+
+.g-recaptcha {
+    width: 100%;
+    transform: scale(0.8);
+    transform-origin: 0 0;
 }
 
 .btnEnvoyer {
@@ -573,6 +580,30 @@ main {
     &:hover {
         background-color: $primaryActive;
     }
+}
+
+.success {
+    padding: 1em;
+    margin-bottom: 0.75rem;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    color: #468847;
+    background-color: #dff0d8;
+    border: 1px solid #d6e9c6;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+.error {
+    padding: 1em;
+    margin-bottom: 0.75rem;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    color: #b94a48;
+    background-color: #f2dede;
+    border: 1px solid rgba(185, 74, 72, 0.3);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
 
 /* Media Queries Small Screen
